; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby/src/extr_dump.c_dump_flags.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby/src/extr_dump.c_dump_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FLAG_BYTEORDER_NATIVE = common dso_local global i64 0, align 8
@DUMP_ENDIAN_NAT = common dso_local global i64 0, align 8
@DUMP_DEBUG_INFO = common dso_local global i64 0, align 8
@DUMP_ENDIAN_BIG = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i64)* @dump_flags to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @dump_flags(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @FLAG_BYTEORDER_NATIVE, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %22

9:                                                ; preds = %2
  %10 = load i64, i64* %4, align 8
  %11 = load i64, i64* @DUMP_ENDIAN_NAT, align 8
  %12 = and i64 %10, %11
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %14, label %20

14:                                               ; preds = %9
  %15 = load i64, i64* %4, align 8
  %16 = load i64, i64* @DUMP_DEBUG_INFO, align 8
  %17 = and i64 %15, %16
  %18 = load i64, i64* @DUMP_ENDIAN_NAT, align 8
  %19 = or i64 %17, %18
  store i64 %19, i64* %3, align 8
  br label %35

20:                                               ; preds = %9
  %21 = load i64, i64* %4, align 8
  store i64 %21, i64* %3, align 8
  br label %35

22:                                               ; preds = %2
  %23 = load i64, i64* %4, align 8
  %24 = load i64, i64* @DUMP_ENDIAN_NAT, align 8
  %25 = and i64 %23, %24
  %26 = icmp eq i64 %25, 0
  br i1 %26, label %27, label %33

27:                                               ; preds = %22
  %28 = load i64, i64* %4, align 8
  %29 = load i64, i64* @DUMP_DEBUG_INFO, align 8
  %30 = and i64 %28, %29
  %31 = load i64, i64* @DUMP_ENDIAN_BIG, align 8
  %32 = or i64 %30, %31
  store i64 %32, i64* %3, align 8
  br label %35

33:                                               ; preds = %22
  %34 = load i64, i64* %4, align 8
  store i64 %34, i64* %3, align 8
  br label %35

35:                                               ; preds = %33, %27, %20, %14
  %36 = load i64, i64* %3, align 8
  ret i64 %36
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
